give box shadow

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -110,6 +110,7 @@ body {
   border: 1px solid #ced4da;
   width: 500px;
   background-color: #ffffff90;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
 .vat-add-deduct {
