--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ body {
   border: 1px solid #ced4da;
   width: 500px;
   background-color: rgba(255, 255, 255, 0.5647058824);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
 .vat-add-deduct {
