--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ Default: 1
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,17 +83,22 @@ body {
 /* COMPONENT STYLES */
 /* ------------------------ */
 /* ------ MAIN ------ */
+main {
+  max-height: 60%;
+}
+
 .headline {
   font-size: 3rem;
   margin-bottom: 20px;
   color: #ffffff;
+  text-align: center;
 }
 
 .form {
   padding: 1rem;
   border-radius: 16px;
   border: 1px solid #ced4da;
-  width: 500px;
+  width: 50rem;
   background-color: rgba(255, 255, 255, 0.5647058824);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
