--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -62,7 +62,7 @@ Default: 1
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -97,18 +97,22 @@ body {
 
 /* ------ MAIN ------ */
 
+main {
+  max-height: 60%;
+}
+
 .headline {
   font-size: 3rem;
   margin-bottom: 20px;
   color: #ffffff;
+  text-align: center;
 }
 
 .form {
-  // background-color: rgba(200, 200, 200, 0.8);
   padding: 1rem;
   border-radius: 16px;
   border: 1px solid #ced4da;
-  width: 500px;
+  width: 50rem;
   background-color: #ffffff90;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
